fix SearchPage spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -545,17 +545,6 @@ html[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.breadcrumbs {
-  margin-top: -0.5rem;
-  margin-bottom: 1rem;
-}
-.breadcrumbs__item .breadcrumbs__link {
-  font-size: 0.8125rem;
-  color: inherit;
-  text-decoration: none;
-  background: none;
-}
-
 .button {
   display: inline-flex;
   align-items: center;
